--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
             z-index: -1;
         }
         
-        .container {
+        。container {
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -59,7 +59,7 @@
             border: 1px solid #ccc;
         }
         
-        select, input[type="submit"] {
+        select， input[type="submit"] {
             padding: 8px 12px;
             margin: 5px;
             border-radius: 4px;
@@ -105,7 +105,7 @@
 <body>
     <div class="container">
         <div class="right-box">
-            <h1>编辑 TEMP_JSON_DATA</h1>
+            <h1>sing-box配置转换器</h1>
             <form id="temp-json-form" method="POST" action="/edit_temp_json">
                 <textarea name="temp_json_data" rows="10" cols="40">{{ temp_json_data | default('') }}</textarea>
                 <br>
